<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RandomTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_btn">START</string>
    <string name="answer_button">ANSWER</string>
    <string name="help_btn">HELP</string>
    <string name="quit_btn">QUIT</string>
    

</resources>
