<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:background="@drawable/hdpi_template_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RandomTestActivity" >
    
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

        <ImageView
            android:id="@+id/answerImageView"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="205dp"
            android:layout_marginLeft="127dp"
            android:src="@drawable/one" />

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@+id/btn_start"
            android:layout_alignBottom="@+id/btn_start"
            android:layout_alignRight="@+id/btn_help"
            android:background="@drawable/button2"
            android:text="@string/answer_button"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_help"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="4dp"
            android:layout_marginTop="78dp"
            android:text="@string/help_btn"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_toRightOf="@+id/btn_start"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_start"
            
            android:text="@string/quit_btn" 
            android:background="@drawable/button2"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button2"
            android:text="@string/start_btn"
            android:textColor="#FFFFFF" />

</RelativeLayout>
